# computational-drawing

./: CMakeLists.txt  DrawingDevice.cpp  Harmonograph.cpp  Pintograph.cpp  Plot.cpp  README.md  main.cpp
data/harmonograph/: figure.txt
data/pintograph/: default.txt
include/: DrawingDevice.h  Harmonograph.h  Pintograph.h  Plot.h  Spirograph.h
